--- a/JAVASCRIPT/Food Final Exam/FOOD App/html/AddFood.html
+++ b/JAVASCRIPT/Food Final Exam/FOOD App/html/AddFood.html
@@ -18,7 +18,7 @@
 
     <div id="menu1">
         <div><a href="./index.html" class="pages">Home</a></div>
-        <div><a href="./AddFood.html" class="pages">Add News</a></div>
+        <div><a href="./AddFood.html" class="pages">Add Food</a></div>
         <div><a href="./SignUp.html" class="pages">Sign Up</a></div>
         <div><a href="./Login.html" class="pages">LogIn</a></div>
     </div>
