--- a/JAVASCRIPT/Food Final Exam/FOOD App/html/cart.html
+++ b/JAVASCRIPT/Food Final Exam/FOOD App/html/cart.html
@@ -5,9 +5,46 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="/FOOD App/ css/cart.css">
+    <link rel="stylesheet" href="/FOOD App/ css/style.css">
 </head>
 <body>
-    
+ 
+    <div id="main">
+        <i class="fa-solid fa-user"></i>
+        <div id="profile"></div>
+        <div id="side">
+          <div id="menu">
+            <div id="menu1">
+              <div><a href="./index.html" class="pages">Home</a></div>
+              <div><a href="./AddFood.html" class="pages">Add Food</a></div>
+              <div><a href="./SignUp.html" class="pages">Sign Up</a></div>
+              <div><a href="./Login.html" class="pages">LogIn</a></div>
+              <div><a href="./cart.html" class="pages">Cart</a></div>
+              <div><input type="text" placeholder="search"></div>
+            </div>
+            <div id="menu2">
+              <div class="pages">
+                <select value="select" id="dropdown">
+                  <option value="allover">All</option>
+                  <option>Low To High</option>
+                  <option>High To Low</option>
+                  <option>Chainis</option>
+                  <option>Indain</option>
+                  <option>Bangali</option>
+                </select>
+              </div>
+              <div><a href="./AddFood.html" class="pages">Surat</a></div>
+              <div><a href="./SignUp.html" class="pages">Ahamdabad</a></div>
+              <div><a href="./SignUp.html" class="pages">Mumbai</a></div>
+              <div><a href="./SignUp.html" class="pages">Delhi</a></div>
+              <div><a href="./SignUp.html" class="pages">Bangal</a></div>
+            </div>
+          </div>
+          <div id="show_data"></div>
+        </div>
+      </div>
+
 </body>
 <script src="/FOOD App/js/cart.js"></script>
+<!-- <script src="/FOOD App/js/script.js"></script> -->
 </html>
