--- a/JAVASCRIPT/Food Final Exam/FOOD App/html/index.html
+++ b/JAVASCRIPT/Food Final Exam/FOOD App/html/index.html
@@ -67,20 +67,21 @@
         <div id="menu">
           <div id="menu1">
             <div><a href="./index.html" class="pages">Home</a></div>
-            <div><a href="./AddFood.html" class="pages">Add News</a></div>
+            <div><a href="./AddFood.html" class="pages">Add Food</a></div>
             <div><a href="./SignUp.html" class="pages">Sign Up</a></div>
             <div><a href="./Login.html" class="pages">LogIn</a></div>
             <div><a href="./cart.html" class="pages">Cart</a></div>
+            <div><input type="text" placeholder="search"></div>
           </div>
           <div id="menu2">
             <div class="pages">
               <select value="select" id="dropdown">
                 <option value="allover">All</option>
-                <option>Surat</option>
-                <option>Ahamdabad</option>
-                <option>Mumbai</option>
-                <option>Delhi</option>
-                <option>Bangal</option>
+                <option>Low To High</option>
+                <option>High To Low</option>
+                <option>Chainis</option>
+                <option>Indain</option>
+                <option>Bangali</option>
               </select>
             </div>
             <div><a href="./AddFood.html" class="pages">Surat</a></div>
