--- a/index.html
+++ b/index.html
@@ -149,6 +149,9 @@
         <li>
             <a href="./JAVASCRIPT/Food Final Exam/FOOD App/html/index.html">Food Final Exam</a>
         </li>
+        <li>
+            <a href="./JAVASCRIPT/E-Learning/index.html">E-Learning</a>
+        </li>
     </ul>
 </body>
 </html>
