--- a/JAVASCRIPT/Food Final Exam/FOOD App/html/index.html
+++ b/JAVASCRIPT/Food Final Exam/FOOD App/html/index.html
@@ -56,7 +56,7 @@
       referrerpolicy="no-referrer"
     />
 
-    <link rel="stylesheet" href="/FOOD App/ css/style.css" />
+    <link rel="stylesheet" href="../ css/style.css" />
   </head>
 
   <body>
@@ -95,5 +95,5 @@
       </div>
     </div>
   </body>
-  <script src="/FOOD App/js/script.js"></script>
+  <script src="../js/script.js"></script>
 </html>
