--- a/HTML,CSS,BOOTSRTAP/FOOD WEBSITE/menu.html
+++ b/HTML,CSS,BOOTSRTAP/FOOD WEBSITE/menu.html
@@ -444,29 +444,8 @@
                   </div>
                 </div>
               </div>
-              <div id="tab-3" class="tab-pane fade show p-0 active">
+              <div id="tab-3" class="tab-pane fade show p-0">
                 <div class="row g-4">
-                  <div class="col-lg-6">
-                    <div class="d-flex align-items-center">
-                      <img
-                        class="flex-shrink-0 img-fluid rounded"
-                        src="img/menu-13.jpg"
-                        alt=""
-                        style="width: 80px"
-                      />
-                      <div class="w-100 d-flex flex-column text-start ps-4">
-                        <h5
-                          class="d-flex justify-content-between border-bottom pb-2"
-                        >
-                          <span>Chhas</span>
-                          <span class="text-primary">₹50</span>
-                        </h5>
-                        <small class="fst-italic"
-                          >Ipsum ipsum clita erat amet dolor justo diam</small
-                        >
-                      </div>
-                    </div>
-                  </div>
                   <div class="col-lg-6">
                     <div class="d-flex align-items-center">
                       <img
@@ -480,7 +459,28 @@
                           class="d-flex justify-content-between border-bottom pb-2"
                         >
                           <span>Bajara-Rotalo</span>
-                          <span class="text-primary">₹100</span>
+                          <span class="text-primary">₹90</span>
+                        </h5>
+                        <small class="fst-italic"
+                          >Ipsum ipsum clita erat amet dolor justo diam</small
+                        >
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-lg-6">
+                    <div class="d-flex align-items-center">
+                      <img
+                        class="flex-shrink-0 img-fluid rounded"
+                        src="img/menu-13.jpg"
+                        alt=""
+                        style="width: 80px"
+                      />
+                      <div class="w-100 d-flex flex-column text-start ps-4">
+                        <h5
+                          class="d-flex justify-content-between border-bottom pb-2"
+                        >
+                          <span>Chhas</span>
+                          <span class="text-primary">₹45</span>
                         </h5>
                         <small class="fst-italic"
                           >Ipsum ipsum clita erat amet dolor justo diam</small
@@ -513,7 +513,7 @@
                     <div class="d-flex align-items-center">
                       <img
                         class="flex-shrink-0 img-fluid rounded"
-                        src="img/menu-6.jpg"
+                        src="img/menu-4.jpg"
                         alt=""
                         style="width: 80px"
                       />
